--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,7 @@
 <p>this is my new repo.</p>
 <p>this is my new feature luuli</p>
 <h1>this is new shit</h1>
+const container = document.getElementById('root'); const root =
+ReactDOM.createRoot(container); root.render(
+<p>Hello</p>
+);
