--- a/index2.html
+++ b/index2.html
@@ -5,3 +5,4 @@ const container = document.getElementById('root'); const root =
 ReactDOM.createRoot(container); root.render(
 <p>Hello</p>
 );
+<h1>tddhmgdt</h1>
