--- a/index2.html
+++ b/index2.html
@@ -6,4 +6,4 @@ ReactDOM.createRoot(container); root.render(
 <p>Hello</p>
 );
 <h1>tddhmgdt</h1>
-<p>this is my new repo</p>
+<p>this is my new repo(dropdown)</p>
